--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>ReFITted</h1>
-	<p>nutrition, psyche & fitness</p>
+	<h1 align="center">ReFITted</h1>
+	<p align="center">nutrition, psyche & fitness</p>
 
 </body>
 </html>
