changed title to reFITted

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ReFITted</title>
+	<title>reFITted</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1 align="center">ReFITted</h1>
+	<h1 align="center">reFITted</h1>
 	<p align="center">nutrition, psyche & fitness</p>
 
 </body>
