--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -25,15 +25,15 @@
 			<aside id="right">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 			</aside>
-			
+
 		</section>
 
 		<nav id="nav_pages">
 			<ul>
-				<li class="li_pages"> <a href="#">physique</a></li>
-				<li class="li_pages"> <a href="#">nourishment</a></li>
-				<li class="li_pages"> <a href="#">mindfulness</a></li>
-				<li class="li_pages"> <a href="#">affirmations</a></li>
+				<li> <a href="#">physique</a></li>
+				<li> <a href="#">nourishment</a></li>
+				<li> <a href="#">mindfulness</a></li>
+				<li> <a href="#">affirmations</a></li>
 			</ul>
 		</nav>
 
