--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -4,35 +4,35 @@
 
 <head>
 	<title>reFITed</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 
 <body>
 	<div class="wrapper">
 
+	<nav class="clearfix">
+		<a href=#>home</a>
+		<a href=#>physique</a>
+		<a href=#>nutrition</a>
+		<a href=#>psyche</a>
+		<a href=#>affirmations</a>
+	</nav>
+
 	<header>
 		<h1>reFITed</h1>
-		<h2 id="slogan">nutrition, psyche & fitness</h2>
 	</header>
 
 	<section>
-			<img src="images/girls_blue.jpg">
+			<img src="images/3bodies.jpg">
 	</section>
 
 	<main>
 		<article>
-			<p>providing you with a plethora of options and all the tips & tricks you need to set your own path towards better health and wellness.</p>
+			<p>providing you with all the tips & tricks you need to set your own path towards better health and wellness</p>
 		</article>
 
-
-		<nav id="nav_pages">
-			<ul>
-				<li> <a href="#">physique</a></li>
-				<li> <a href="#">nourishment</a></li>
-				<li> <a href="#">mindfulness</a></li>
-				<li> <a href="#">affirmations</a></li>
-			</ul>
-		</nav>
 	</main>
 
 	
